--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>ThreeFiz Hub</title>
     <style>
       body {
         background-color: gray;
@@ -12,7 +12,16 @@
     </style>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/demos/box_and_box_floor.ts"></script>
+    <div id="app" style="display: flex; flex-direction:column">
+      <a href="./demos/box_and_box_floor.html">Box & Box Floor</a>
+      <a href="./demos/box_box_collision.html">Box Box Collison</a>
+      <a href="./demos/boxes.html">Boxes</a>
+      <a href="./demos/cannon.html">Cannon</a>
+      <a href="./demos/container.html">Container</a>
+      <a href="./demos/objects_and_box_floor.html">objects & box floor</a>
+      <a href="./demos/sphere_and_box.html">Sphere & box</a>
+      <a href="./demos/sphere_gravity.html">Sphere gravity</a>
+      <a href="./demos/spheres.html">Spheres</a>
+    </div>
   </body>
 </html>
