I fucking pimped out almost everything and wrote from scratch - working OBBs collision without dancing object FINALLY

--- a/demos/block&floor.html
+++ b/demos/block&floor.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThreeFiz - container</title>
+    <title>ThreeFiz - two blocks</title>
     <style>
       body {
-        background-color: gray;
+        margin: 0;
+        background-color: lightgray;
       }
     </style>
   </head>
   <body>
   </body>
-  <script type="module" src="../src/demos/container.ts"></script>   
-  </html>
-
-
+  <script type="module" src="../src/demos/block&floor.ts" ></script>
+</html>
