--- a/index.html
+++ b/index.html
@@ -13,15 +13,8 @@
   </head>
   <body>
     <div id="app" style="display: flex; flex-direction:column">
-      <a href="./demos/box_and_box_floor.html">Box & Box Floor</a>
-      <a href="./demos/box_box_collision.html">Box Box Collison</a>
-      <a href="./demos/boxes.html">Boxes</a>
-      <a href="./demos/cannon.html">Cannon</a>
-      <a href="./demos/container.html">Container</a>
-      <a href="./demos/objects_and_box_floor.html">objects & box floor</a>
-      <a href="./demos/sphere_and_box.html">Sphere & box</a>
-      <a href="./demos/sphere_gravity.html">Sphere gravity</a>
-      <a href="./demos/spheres.html">Spheres</a>
+      <a href="./demos/twoBlocks.html">Two blocks</a>
+      <a href="./demos/block&floor.html">Block & floor</a>
     </div>
   </body>
 </html>
