--- a/demos/twoBlocks.html
+++ b/demos/twoBlocks.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThreeFiz - boxes </title>
+    <title>ThreeFiz - two blocks</title>
     <style>
       body {
-        background-color: gray;
+        margin: 0;
+        background-color: lightgray;
       }
     </style>
   </head>
   <body>
   </body>
-  <script type="module" src="../src/demos/boxes.ts"></script>
-  </html>
+  <script type="module" src="../src/demos/twoBlocks.ts" ></script>
+</html>
