add demo for class Sphere

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div id="app" style="display: flex; flex-direction:column">
+      <a href="./demos/twoSpheres.html">Two spheres</a>
       <a href="./demos/twoBlocks.html">Two blocks</a>
       <a href="./demos/block&floor.html">Block & floor</a>
     </div>
