--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="./demos/twoSpheres.html">Two spheres</a>
       <a href="./demos/twoBlocks.html">Two blocks</a>
       <a href="./demos/block&floor.html">Block & floor</a>
+      <a href="./demos/block&sphere.html">Block & sphere</a>
     </div>
   </body>
 </html>
