--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div id="app" style="display: flex; flex-direction:column">
       <a href="./demos/twoSpheres.html">Two spheres</a>
       <a href="./demos/twoBlocks.html">Two blocks</a>
-      <a href="./demos/block&floor.html">Block & floor</a>
       <a href="./demos/block&sphere.html">Block & sphere</a>
+      <a href="./demos/block&floor.html">Block & floor</a>
+      <a href="./demos/objects&floor.html">Objects & floor</a>
     </div>
   </body>
 </html>
