add demo - friction test

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="./demos/block&sphere.html">Block & sphere</a>
       <a href="./demos/block&floor.html">Block & floor</a>
       <a href="./demos/objects&floor.html">Objects & floor</a>
+      <a href="./demos/fricitionTest.html">Fricition test</a>
     </div>
   </body>
 </html>
