--- a/demos/block&sphere.html
+++ b/demos/block&sphere.html
@@ -11,8 +11,10 @@
         background-color: lightgray;
       }
     </style>
+    <script type="module" crossorigin src="/assets/blockSphere-DyiNJQEb.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/init-CNUnViQ-.js">
+    <link rel="modulepreload" crossorigin href="/assets/lil-gui.module.min-Bc0DeA9g.js">
   </head>
   <body>
-  </body>
-  <script type="module" src="../src/demos/block&sphere.ts" ></script>
+  </body>
 </html>
