--- a/demos/fricitionTest.html
+++ b/demos/fricitionTest.html
@@ -11,8 +11,9 @@
         background-color: lightgray;
       }
     </style>
+    <script type="module" crossorigin src="/assets/frictionTest-Bnnhp-Hs.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/init-CNUnViQ-.js">
   </head>
   <body>
-  </body>
-  <script type="module" src="../src/demos/fricitionTest.ts" ></script>
+  </body>
 </html>
