--- a/demos/block&floor.html
+++ b/demos/block&floor.html
@@ -11,10 +11,8 @@
         background-color: lightgray;
       }
     </style>
-    <script type="module" crossorigin src="/assets/blockFloor-BI0T0jwz.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/init-CNUnViQ-.js">
-    <link rel="modulepreload" crossorigin href="/assets/lil-gui.module.min-Bc0DeA9g.js">
   </head>
   <body>
-  </body>
+  </body>
+  <script type="module" src="../src/demos/block&floor.ts" ></script>
 </html>
