--- a/demos/twoSpheres.html
+++ b/demos/twoSpheres.html
@@ -11,10 +11,8 @@
         background-color: lightgray;
       }
     </style>
-    <script type="module" crossorigin src="/assets/twoSpheres-Cmz_kC0G.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/init-CNUnViQ-.js">
-    <link rel="modulepreload" crossorigin href="/assets/lil-gui.module.min-Bc0DeA9g.js">
   </head>
   <body>
-  </body>
+  </body>
+  <script type="module" src="../src/demos/twoSpheres.ts" ></script>
 </html>
