--- a/demos/twoBlocks.html
+++ b/demos/twoBlocks.html
@@ -11,9 +11,9 @@
         background-color: lightgray;
       }
     </style>
-    <script type="module" crossorigin src="/ThreeFiz/assets/twoBlocks-KmdLCTli.js"></script>
-    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/init-CNUnViQ-.js">
-    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/lil-gui.module.min-Bc0DeA9g.js">
+    <script type="module" crossorigin src="/ThreeFiz/assets/twoBlocks-CG_2zbiy.js"></script>
+    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/init-BHUQqx8w.js">
+    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/lil-gui.module.min-Vka56b52.js">
   </head>
   <body>
   </body>
