--- a/demos/block&sphere.html
+++ b/demos/block&sphere.html
@@ -11,9 +11,9 @@
         background-color: lightgray;
       }
     </style>
-    <script type="module" crossorigin src="/ThreeFiz/assets/blockSphere-DyiNJQEb.js"></script>
-    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/init-CNUnViQ-.js">
-    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/lil-gui.module.min-Bc0DeA9g.js">
+    <script type="module" crossorigin src="/ThreeFiz/assets/blockSphere-D1FMXp1c.js"></script>
+    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/init-BHUQqx8w.js">
+    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/lil-gui.module.min-Vka56b52.js">
   </head>
   <body>
   </body>
