--- a/demos/cannon.html
+++ b/demos/cannon.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThreeFiz - two blocks</title>
+    <title>ThreeFiz - two spheres</title>
     <style>
       body {
         margin: 0;
         background-color: lightgray;
       }
     </style>
-    <script type="module" crossorigin src="/ThreeFiz/assets/blockFloor-CzcnPc5W.js"></script>
-    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/init-BHUQqx8w.js">
+    <script type="module" crossorigin src="/ThreeFiz/assets/cannon-BEfjU6RZ.js"></script>
+    <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/init-4ysTRn35.js">
     <link rel="modulepreload" crossorigin href="/ThreeFiz/assets/lil-gui.module.min-Vka56b52.js">
   </head>
   <body>
