--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
   <body>
     <div id="app">
       <a href="./demos/objects&floor.html">
-        <div><img src="/ThreeFiz/assets/objects_floor-EwalvWMM.png" /></div>
+        <div><img src="/ThreeFiz/assets/objects_floor.png" /></div>
         <span>Objects & floor</span>
       </a>
       <a href="./demos/fricitionTest.html">
-        <div><img src="/ThreeFiz/assets/frictionTest-DMmMIF2A.png" /></div>
+        <div><img src="/ThreeFiz/assets/frictionTest.png" /></div>
         <span>Fricition test</span></a>
       <a href="./demos/cannon.html">
-        <div><img src="/ThreeFiz/assets/cannon-B5Gamt3j.png" /></div>
+        <div><img src="/ThreeFiz/assets/cannon.png" /></div>
       <span>Cannon</span></a>
     </div>
   </body>
